php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68421 access.format='%R' doesn't log ipv6 address
Submitted: 2014-11-14 10:21 UTC Modified: 2014-11-14 18:16 UTC
From: sjon at hortensius dot net Assigned: remi (profile)
Status: Closed Package: FPM related
PHP Version: 5.6.3 OS:
Private report: No CVE-ID: None
 [2014-11-14 10:21 UTC] sjon at hortensius dot net
Description:
------------
access.format='%R' results in 0.0.0.0 being logged, instead of the correct ipv6 address


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-11-14 18:10 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5112fdd670175f4eab4529c84ccf4774f5577797
Log: Fix bug #68421 access.format='%R' doesn't log ipv6 address
 [2014-11-14 18:10 UTC] remi@php.net
-Status: Open +Status: Closed
 [2014-11-14 18:16 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 [2014-11-17 05:59 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4657289e87e18bb8967d5a8b0163c772d410e2b8
Log: Improve fix bug #68421 access.format='%R' doesn't log ipv6 address
 [2014-11-18 20:34 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4657289e87e18bb8967d5a8b0163c772d410e2b8
Log: Improve fix bug #68421 access.format='%R' doesn't log ipv6 address
 [2014-11-18 20:34 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5112fdd670175f4eab4529c84ccf4774f5577797
Log: Fix bug #68421 access.format='%R' doesn't log ipv6 address
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC