Improve fix bug #68421 access.format='%R' doesn't log ipv6 address

Log IPv4-Mapped-Ipv6 address as IPv4 (not as IPv6)